# pyWebShotX

./: MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  subdominios.txt
src/: main.py
src/core/: scanner.py  screenshot.py
src/report/: generator.py
src/report/templates/: report.html
src/utils/: logger.py
