[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywebshotx"
version = "1.0.0"
description = "A robust bugbounty tool for automated subdomain screenshots and technology detection."
readme = "README.md"
authors = [
  { name = "B0fill3", email = "B0fill3@users.noreply.github.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.35.0",
    "webtech>=1.2.7",
    "jinja2>=3.1.0",
]

[project.scripts]
pywebshotx = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.report" = ["templates/*.html"]
